<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Inspection Framework</string>
    <string name="title_activity_assignment_list">Assignment List</string>
    <string name="action_synchronize">Synchronization</string>
    <string name="title_activity_task_list">Task List</string>
    <string name="title_activity_task_details">Task Details</string>
    <string name="show_assignment_details">Assignment Details</string>
    <string name="show_task_attachment">Add Attachment</string>
    <string name="finish_assignment">(Un-)finish assignment</string>
    <string name="title_activity_assignment_details">Assignment Details</string>
    <string name="list_noItemsAvailable">No Items Available!</string>
    <string name="tab_user_login">Login</string>
    <string name="tab_user_list">User list</string>
    <string name="text_pair_smartphone">Login via paired smartphone or Vuzix virtual keyboard\n(OS 2.3 or higher required).\nOtherwise, select a user from the user list.</string>
    <string name="text_userlogin_button">Login</string>
    <string name="title_activity_fragment_task_attachment">FragmentTaskAttachment</string>
    <string name="AttachmentButton_voice">Voice Recording</string>
    <string name="AttachmentButton_picture">Take a picture</string>
    <string name="AttachmentButton_saveandexit">Save and exit</string>
    <string name="title_activity_soundrecording">Soundrecording</string>
    <string name="action_logout_user">User Logout</string>
    <string name="toast_no_internet">No Internet connection available</string>
    <string name="title_activity_task_attachment">TaskAttachment</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_clean_database">Clean Database</string>
    <string name="toast_sync_success">Synchronization finished!</string>
    <string name="action_create_testcases">Create Testcases</string>
    <string name="list_noUserAvailable">No User Available!</string>
    <string name="title_activity_attachment_handler">AttachmentHandler</string>
    <string name="chronometer">Chronometer</string>
    <string name="start_audio_recording">Start Audio Recording</string>
    <string name="take_a_photo">Take a Photo</string>

</resources>
