<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.teamproject.inspectionframework.TaskList" >

    <item
        android:id="@+id/action_show_assignment_details"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/show_assignment_details">
    </item>
    <item
        android:id="@+id/action_show_task_attachment"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/show_task_attachment">
    </item>
    <item
        android:id="@+id/action_finish_assignment"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/finish_assignment">
    </item>

</menu>