<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/attachmentButton_picture"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/AttachmentButton_picture" />

    <Button
        android:id="@+id/attachmentButton_saveandexit"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/attachmentButton_voice"
        android:layout_marginRight="22dp"
        android:layout_marginTop="22dp"
        android:layout_toLeftOf="@+id/attachmentButton_voice"
        android:text="@string/AttachmentButton_saveandexit" />

    <Button
        android:id="@+id/attachmentButton_voice"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/attachmentButton_picture"
        android:layout_marginRight="28dp"
        android:layout_marginTop="50dp"
        android:onClick="voiceRecordingScreen"
        android:text="@string/AttachmentButton_voice" />

</RelativeLayout>